objects/Marketo_Email_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID_Field_Name__c</fullName>
        <label>Account ID Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketo Email Campaigns</relationshipLabel>
        <relationshipName>Marketo_Email_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Marketo Email Campaigns</relationshipLabel>
        <relationshipName>Marketo_Email_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Automation_API_Reference__c</fullName>
        <label>Custom Automation API Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Field_to_Update_on_Request_Sent__c</fullName>
        <label>Date Field to Update on Request Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Reminder_DateTime_Field__c</fullName>
        <label>Hourly Reminder DateTime Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Many_Random_Records__c</fullName>
        <inlineHelpText>How many random records to return</inlineHelpText>
        <label>How Many Random Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketo_Campaign_ID__c</fullName>
        <label>Marketo Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Email_Campaign_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketo Email Campaign Template</label>
        <referenceTo>Marketo_Email_Campaign__c</referenceTo>
        <relationshipLabel>Marketo Email Campaigns</relationshipLabel>
        <relationshipName>Marketo_Email_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketo_Request_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketo Request Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Record_Default_Values__c</fullName>
        <label>New Record Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Randomize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Randomize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Marketo_ID_For_Touchplan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>*WARNING* - only use this if you want to use the Marketo ID for Touchplan instead of the Marketo ID as the Marketo Lead ID value. Currently only used for WBN Touchplans. If you aren't sure, talk to a developer!</inlineHelpText>
        <label>Use Marketo ID For Touchplan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Hours_For_Reminder__c</fullName>
        <label># of Hours For Reminder</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketo Email Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Marketo_Request_Sent__c</columns>
        <columns>Marketo_Email_Campaign_Template__c</columns>
        <columns>Marketo_Campaign_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hourly_Templates</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketo_Email_Campaign__c.Hourly_Template</value>
        </filters>
        <label>Hourly Templates</label>
    </listViews>
    <listViews>
        <fullName>Lighthouse</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Lighthouse</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>LH</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketo_Email_Campaign__c.Template</value>
        </filters>
        <label>Lighthouse</label>
    </listViews>
    <listViews>
        <fullName>Local</fullName>
        <booleanFilter>(1 or 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Local</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Essentials</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketo_Email_Campaign__c.Template</value>
        </filters>
        <label>Local</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Emails_Marketo_Email_Campaign</fullName>
        <filterScope>Queue</filterScope>
        <label>Marketing Emails</label>
        <queue>Marketing_Emails</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TORCHx</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>TORCHx</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketo_Email_Campaign__c.Template</value>
        </filters>
        <label>TORCHx</label>
    </listViews>
    <listViews>
        <fullName>Template</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Criteria__c</columns>
        <columns>Randomize__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Marketo_Campaign_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketo_Email_Campaign__c.Template,Marketo_Email_Campaign__c.Hourly_Template</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Template</label>
    </listViews>
    <listViews>
        <fullName>WBN</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Date_Field_to_Update_on_Request_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>WBN,YBN</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketo_Email_Campaign__c.Template</value>
        </filters>
        <label>WBN</label>
    </listViews>
    <nameField>
        <label>Marketo Email Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketo Email Campaigns</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hourly_Template</fullName>
        <active>true</active>
        <description>Used for Hourly Marketo Campaigns</description>
        <label>Hourly Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>